# mara

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  INSTALL.md  LICENSE  NOTICE  README.md  SECURITY.md  clippy.toml  deny.toml  rust-toolchain.toml  rustfmt.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY-ADVISORIES.md  dependabot.yml
.github/workflows/: ci.yml  hugo.yml  otlp-live-sample.yml  release.yml  security.yml
crates/mara-adapter-analytics/: Cargo.toml
crates/mara-adapter-analytics/src/: lib.rs
crates/mara-adapter-hooks/: Cargo.toml  README.md
crates/mara-adapter-hooks/src/: lib.rs
crates/mara-adapter-jsonl/: Cargo.toml
crates/mara-adapter-jsonl/src/: lib.rs
crates/mara-adapter-llm-proxy/: Cargo.toml
crates/mara-adapter-llm-proxy/src/: exchange.rs  http_proxy.rs  lib.rs  normalizer.rs  proxy_failure_kind.rs  w3c_traceparent.rs
crates/mara-adapter-otlp/: Cargo.toml
crates/mara-adapter-otlp/src/: config.rs  grpc.rs  http.rs  lib.rs  normalize.rs
crates/mara-cli/: Cargo.toml
crates/mara-cli/src/: main.rs  metrics_server.rs  run.rs  setup.rs
crates/mara-core/: Cargo.toml
crates/mara-core/src/: config.rs  error.rs  health.rs  lib.rs  pipeline.rs  policy.rs  self_metrics.rs  traits.rs
crates/mara-gateway/: Cargo.toml
crates/mara-gateway/src/: main.rs
crates/mara-policy/: Cargo.toml
crates/mara-policy/src/: lib.rs
crates/mara-policy/src/builtin/: deny.rs  mod.rs  privacy.rs  redact.rs  sample.rs
crates/mara-runtime-augment/: Cargo.toml
crates/mara-runtime-augment/src/: lib.rs
crates/mara-runtime-claude-code/: Cargo.toml
crates/mara-runtime-claude-code/src/: lib.rs
crates/mara-runtime-codex/: Cargo.toml
crates/mara-runtime-codex/src/: lib.rs
crates/mara-runtime-cursor/: Cargo.toml
crates/mara-runtime-cursor/src/: lib.rs
crates/mara-runtime-gemini/: Cargo.toml
crates/mara-runtime-gemini/src/: lib.rs
crates/mara-runtime-kimi/: Cargo.toml
crates/mara-runtime-ollama/: Cargo.toml
crates/mara-runtime-ollama/src/: cost_estimate.rs  lib.rs  normalizer.rs
crates/mara-schema/: Cargo.toml
crates/mara-schema/src/: lib.rs
crates/mara-sink-elasticsearch/: Cargo.toml
crates/mara-sink-elasticsearch/src/: lib.rs
crates/mara-sink-file/: Cargo.toml
crates/mara-sink-file/src/: lib.rs
crates/mara-sink-kafka/: Cargo.toml
crates/mara-sink-loki/: Cargo.toml
crates/mara-sink-object-store/: Cargo.toml
crates/mara-sink-object-store/src/: lib.rs
crates/mara-sink-otlp/: Cargo.toml
crates/mara-sink-otlp/src/: config.rs  encode.rs  lib.rs
crates/mara-sink-prom-rw/: Cargo.toml
crates/mara-sink-prom-rw/src/: lib.rs
crates/mara-sink-splunk-hec/: Cargo.toml
crates/mara-sink-splunk-hec/src/: lib.rs
crates/mara-sink-webhook/: Cargo.toml
docs/: compat-matrix.md  llm-proxy-non-loopback-threat-model.md  llm-proxy-single-upstream.md  ollama-gen-ai-pricing.md  ollama-llm-proxy-capabilities.md  ollama-null-fields.md  ollama-proxy-error-taxonomy.md  otlp-http-receiver-threat-model.md  privacy-modes-m1-07.md  runbook.md  scope.md  threat-model.md
docs/adr/: 0001-license-apache-2-0.md  0002-wasm-policy-host.md  0003-wal-format.md  0004-hot-reload.md  0005-async-runtime.md  0006-error-model.md  0007-config-format.md  README.md  _template.md
docs/captured/: mara-runtime-ollama-tests.txt  telemetry-quality-from-fixture.md  workspace-tests.txt
docs/deploy/: kubernetes-metrics-and-probes.md
docs/grafana/: README.md  mara-gen-ai-starter.json
docs/integrations/: eval-platform-otlp-export-profile.md  hermes-openclaw.md  phoenix-openinference-bridge.md  presidio-pii-sidecar-pattern.md  runtime-parity-matrix.md
docs/milestones/: mara-m0-m2-board.md
docs/observability/: gen-ai-agent-spans-experimental.md  mara-policy-drop-audit.md  mara-readyz-semantics.md  mara-self-metrics-latency-histogram.md  mara-self-metrics-m1-05.md  mara-self-metrics-scrape-performance.md  pipeline-wal-spool.md
docs/quickstarts/: README.md  mixed-runtime.toml  ollama-heavy.toml  privacy-first.toml
docs/spikes/: m2-22-vector-gpu-telemetry.md
examples/: mara-phoenix-bridge.toml  mara.toml
packaging/homebrew/: mara.rb
packaging/launchd/: dev.ardurai.mara.plist
packaging/systemd/: mara.service
plans/: README.md
plans/00-overview/: 01-mission-and-scope.md  02-non-goals.md  03-glossary.md
plans/01-landscape/: 01-classic-log-shippers.md  02-observability-platforms.md  03-ai-llm-observability-tools.md  04-otel-gen-ai-semconv.md  05-licensing-and-governance.md  06-security-and-compliance.md  07-rust-crate-ecosystem.md  08-ai-runtime-telemetry-surfaces.md
plans/02-gaps/: 01-operational-pain-points.md  02-cost-and-latency-gaps.md  03-agent-loop-observability-gaps.md  04-policy-and-redaction-gaps.md  05-schema-fragmentation.md
plans/03-value-proposition/: 01-positioning-statement.md  02-feature-matrix.md  03-unique-value-claims.md  04-target-personas.md
plans/04-implementation/: 01-functional-requirements.md  02-non-functional-requirements.md  03-architecture-blocks.md  04-data-model.md  05-pipeline-topologies.md  06-deployment-patterns-overview.md  07-phased-milestones.md  08-success-metrics.md  09-test-strategy.md
plans/05-evaluation/: 01-benchmark-methodology.md  02-compatibility-matrix-spec.md  03-soc2-control-mapping.md  04-eu-ai-act-alignment.md
plans/06-deployment-blueprints/: 01-macos-launchd.md  02-linux-systemd.md  03-windows-service.md  04-kubernetes-daemonset.md  05-kubernetes-sidecar.md  06-serverless-lambda-extension.md  07-docker-compose.md  08-ci-runners.md
plans/07-quickstarts/: 01-claude-code.md  02-codex.md  03-cursor.md  04-kimi.md  05-augment.md  06-gemini-cli.md  07-ollama.md
plans/08-mvp/: 01-scope-and-decision-criteria.md  02-gap-analysis.md  03-language-choice.md  04-ai-native-features.md  05-problem-statement.md  06-mvp-implementation-plan.md  07-test-and-improve-loop.md  (+14 more)
scripts/: check_semconv_lock.sh  materialize_agent_run_summary.py
tests/: e2e_pipeline.rs
website/: README.md  hugo.toml
xtask/: Cargo.toml
xtask/src/: main.rs
(+53 files in other folders)
