[package]
name = "mara-adapter-analytics"
description = "Mara analytics REST poller adapter for vendor analytics APIs (e.g., Augment)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
mara-core.workspace = true
mara-schema.workspace = true

[lints]
workspace = true
