[package]
name = "mara-adapter-hooks"
description = "Mara hooks adapter: JSON over stdio or HTTP from AI-runtime subprocess hooks."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
mara-core.workspace = true
mara-schema.workspace = true

[lints]
workspace = true
