[package]
name = "mara-adapter-jsonl"
description = "Mara JSONL tail adapter with per-file offset checkpointing."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "fs", "io-util", "macros", "sync", "time"] }
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
parking_lot.workspace = true
mara-core.workspace = true
mara-schema.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
