[package]
name = "mara-adapter-llm-proxy"
description = "Mara HTTP proxy adapter: binds a local port, forwards to an LLM upstream (Ollama, OpenAI-compat servers), captures request and response bodies without mutation, and emits canonical events via a runtime-supplied normalizer."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
bytes.workspace = true
http.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util = { workspace = true, features = ["channel"] }
uuid.workspace = true
mara-core.workspace = true
mara-schema.workspace = true

[dev-dependencies]
reqwest.workspace = true

[lints]
workspace = true
