[package]
name = "mara-cli"
description = "The mara binary: run, validate, test pipeline, diag, setup, dlq, version."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "mara"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "fs", "sync", "time", "process", "io-util", "net"] }
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
mara-core.workspace = true
mara-schema.workspace = true
mara-policy.workspace = true
mara-adapter-jsonl.workspace = true
mara-adapter-otlp.workspace = true
mara-sink-file.workspace = true

[lints]
workspace = true
