[package]
name = "mara-gateway"
description = "Mara gateway tier (v2 placeholder)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "mara-gateway"
path = "src/main.rs"

[dependencies]
mara-core.workspace = true

[lints]
workspace = true
