[package]
name = "mara-runtime-codex"
description = "Codex (OpenAI) runtime preset for Mara: OTLP receive + JSONL tail + notify hook."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
mara-core.workspace = true
mara-schema.workspace = true
mara-adapter-otlp.workspace = true
mara-adapter-jsonl.workspace = true
mara-adapter-hooks.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
