[package]
name = "mara-runtime-cursor"
description = "Cursor Agents runtime preset for Mara: hooks adapter (no transcript file or OTLP)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
mara-core.workspace = true
mara-schema.workspace = true
mara-adapter-hooks.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
