[package]
name = "mara-runtime-gemini"
description = "Gemini CLI (Google) runtime preset for Mara: OTLP receive with `gen_ai.*` attributes."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
mara-core.workspace = true
mara-schema.workspace = true
mara-adapter-otlp.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
