[package]
name = "mara-schema"
description = "Mara canonical event schema aligned with OpenTelemetry gen_ai.* semantic conventions."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
time.workspace = true
thiserror.workspace = true

[lints]
workspace = true
