[package]
name = "mara-sink-otlp"
description = "Mara OTLP sink: emits canonical events over gRPC, HTTP/protobuf, HTTP/JSON."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio.workspace = true
async-trait.workspace = true
thiserror.workspace = true
tracing.workspace = true
mara-core.workspace = true
mara-schema.workspace = true
serde_json.workspace = true
prost.workspace = true
bytes.workspace = true
opentelemetry-proto.workspace = true
reqwest.workspace = true
flate2.workspace = true

[dev-dependencies]
mara-adapter-otlp.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net", "io-util"] }
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true

[lints]
workspace = true
